Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3696

sanity test_17m, test_17n: e2fsck unattached inodes failure

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.6.0, Lustre 2.5.4
    • Lustre 2.5.0, Lustre 2.6.0
    • 3
    • 9541

      I'm trying to find what test/environment/circumstances fills an OST during autotest. I ran sanity three times in a row on Toro; https://maloo.whamcloud.com/test_sessions/90d23e6c-fbe4-11e2-aaad-52540035b04c . I didn't hit the full OST problem, but I did run into sanity test 17m failures.

      On the second and, not surprisingly, third run of sanity, test 17m failed with:
      sanity test_17m: @@@@@@ FAIL: e2fsck should not report error upon short/long symlink MDT: rc=4

      This first, successful, run of test 17m has the following output:

      01:55:18:stop and checking mds1: e2fsck -fnvd /dev/lvm-MDS/P1
      01:55:18:CMD: client-24vm3 grep -c /mnt/mds1' ' /proc/mounts
      01:55:18:Stopping /mnt/mds1 (opts:-f) on client-24vm3
      01:55:18:CMD: client-24vm3 umount -d -f /mnt/mds1
      01:55:18:CMD: client-24vm3 lsmod | grep lnet > /dev/null && lctl dl | grep ' ST '
      01:55:18:CMD: client-24vm3 e2fsck -fnvd /dev/lvm-MDS/P1
      01:55:18:client-24vm3: e2fsck 1.42.7.wc1 (12-Apr-2013)
      01:55:18:Pass 1: Checking inodes, blocks, and sizes
      01:55:18:Pass 2: Checking directory structure
      01:55:18:Pass 3: Checking directory connectivity
      01:55:18:Pass 4: Checking reference counts
      01:55:18:Pass 5: Checking group summary information
      01:55:18:
      01:55:18:        1324 inodes used (0.13%, out of 1048576)
      01:55:18:           7 non-contiguous files (0.5%)
      01:55:18:           1 non-contiguous directory (0.1%)
      01:55:18:             # of inodes with ind/dind/tind blocks: 2/0/0
      01:55:18:      154573 blocks used (29.48%, out of 524288)
      01:55:18:           0 bad blocks
      01:55:18:           1 large file
      01:55:18:
      01:55:18:         127 regular files
      01:55:18:         137 directories
      01:55:18:           0 character device files
      01:55:18:           0 block device files
      01:55:18:           0 fifos
      01:55:18:           0 links
      01:55:18:        1051 symbolic links (526 fast symbolic links)
      01:55:18:           0 sockets
      01:55:18:------------
      01:55:18:        1315 files
      

      This second run of test 17m has the following output:

      == sanity test 17m: run e2fsck against MDT which contains short/long symlink == 04:23:23 (1375442603)
      CMD: client-24vm3 /usr/sbin/lctl get_param -n version
      CMD: client-24vm3 /usr/sbin/lctl get_param -n version
      create 512 short and long symlink files under /mnt/lustre/d0.sanity/d17m
      erase them
      Waiting for local destroys to complete
      recreate the 512 symlink files with a shorter string
      stop and checking mds1: e2fsck -fnvd /dev/lvm-MDS/P1
      CMD: client-24vm3 grep -c /mnt/mds1' ' /proc/mounts
      Stopping /mnt/mds1 (opts:-f) on client-24vm3
      CMD: client-24vm3 umount -d -f /mnt/mds1
      CMD: client-24vm3 lsmod | grep lnet > /dev/null && lctl dl | grep ' ST '
      CMD: client-24vm3 e2fsck -fnvd /dev/lvm-MDS/P1
      client-24vm3: e2fsck 1.42.7.wc1 (12-Apr-2013)
      client-24vm3: e2fsck_pass1:1500: increase inode 32773 badness 0 to 2
      Pass 1: Checking inodes, blocks, and sizes
      Pass 2: Checking directory structure
      Pass 3: Checking directory connectivity
      Pass 4: Checking reference counts
      Unattached inode 635
      Connect to /lost+found? no
      
      Unattached inode 636
      Connect to /lost+found? no
      
      Unattached inode 638
      Connect to /lost+found? no
      
      Unattached inode 639
      Connect to /lost+found? no
      
      Unattached inode 641
      Connect to /lost+found? no
      
      Unattached inode 645
      Connect to /lost+found? no
      
      Unattached inode 1841
      Connect to /lost+found? no
      
      Unattached inode 1842
      Connect to /lost+found? no
      
      Unattached inode 1843
      Connect to /lost+found? no
      
      Unattached inode 1844
      Connect to /lost+found? no
      
      Unattached inode 1845
      Connect to /lost+found? no
      
      Unattached inode 1846
      Connect to /lost+found? no
      
      Unattached inode 1847
      Connect to /lost+found? no
      
      Unattached inode 1848
      Connect to /lost+found? no
      
      Unattached inode 1849
      Connect to /lost+found? no
      
      Unattached inode 1850
      Connect to /lost+found? no
      
      Unattached inode 1851
      Connect to /lost+found? no
      
      Unattached inode 1852
      Connect to /lost+found? no
      
      Unattached inode 1855
      Connect to /lost+found? no
      
      Unattached inode 1894
      Connect to /lost+found? no
      
      Unattached inode 1895
      Connect to /lost+found? no
      
      Unattached inode 1896
      Connect to /lost+found? no
      
      Unattached inode 1897
      Connect to /lost+found? no
      
      Unattached inode 1898
      Connect to /lost+found? no
      
      Unattached inode 1899
      Connect to /lost+found? no
      
      Unattached inode 1900
      Connect to /lost+found? no
      
      Unattached inode 1901
      Connect to /lost+found? no
      
      Unattached inode 1902
      Connect to /lost+found? no
      
      Unattached inode 1903
      Connect to /lost+found? no
      
      Unattached inode 1904
      Connect to /lost+found? no
      
      Unattached inode 1905
      Connect to /lost+found? no
      
      Unattached inode 1908
      Connect to /lost+found? no
      
      Pass 5: Checking group summary information
      
      lustre-MDT0000: ********** WARNING: Filesystem still has errors **********
      
      
              1396 inodes used (0.13%, out of 1048576)
                40 non-contiguous files (2.9%)
                 2 non-contiguous directories (0.1%)
                   # of inodes with ind/dind/tind blocks: 18/2/0
            158490 blocks used (30.23%, out of 524288)
                 0 bad blocks
                 1 large file
      
               197 regular files
               139 directories
                 0 character device files
                 0 block device files
                 0 fifos
                 0 links
              1051 symbolic links (526 fast symbolic links)
                 0 sockets
      ------------
              1355 files
      

      Because the same test names were run in one test session, if looks like Maloo is confusing the output of one run with another and is a little confusing when looking at the logs. The time stamps also seem to be in the future of when the results were reported. Hopefully, I'm just misreading the logs and time stamps.

            adilger Andreas Dilger
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: