LU-3696 mdt: Unlink volatile files

When a volatile is created, it leaves an unattached
inode.

Testing unlink of volatile file right after creation.

Test-Parameters: fortestonly testlist=sanity,sanity
Signed-off-by: James A. Nunez <james.a.nunez@intel.com>
Change-Id: I4bd37395a8eff94458e62414a5a4e7206b76d32d